# signature_task

./: .gitignore  CLASSIFICATION_REPORT.md  EXECUTION_COMMANDS.md  EXECUTIVE_SUMMARY.md  FINAL_REPORT.md  FINAL_REPORT_v2.md  Makefile  PUSH_READY.md  README.md  RELEASE_CHECKLIST.md  TECHNICAL_REPORT.md  analyze_cc_pattern.py  analyze_errors.py  analyze_misclass.py  analyze_misclassified.py  check_img1809_features.py  check_img_props.py  classifier.py  comparator.py  config.py  debug_binary.py  debug_img180x.py  debug_skeleton.py  detector.py  full_dataset_test.py  poc.py  poc_son.py  pyproject.toml  quick_test_fixes.py  requirements.txt  show_summary.py  test_api_simple.py  test_llm_classification.py  test_output.txt  test_signatures.py  test_vlm.py  vlm_full_results.csv
config/: config.yaml
data/: 0091713C-E0D1-4D5F-8AED-5D30092F60D2.heic  00E63411-4E8D-4A02-93B6-ACA4384B530C.heic  010E64F7-943B-495A-B1BC-39A15F046F01.heic  031BC602-CD41-4E1C-8508-40A9DDF4AAA5.heic  03C9DD12-958B-42CB-8E90-5FAA44B9DB31.heic  048D751F-2689-44D0-85B8-D0373514DF4A.heic  059DF602-FD2A-46C0-8CDE-125F77CAF58F.heic  06858C1C-E60A-4FDD-8E3B-CDD1E172BF2E.heic  06D3183D-CF80-4DCE-B8B5-445557505F57.heic  082ACAEE-47BD-4508-AA3A-34AA9A3BB03C.heic  08602502-7B85-424B-8776-D5379D533B24.heic  09ACBBEE-E4D9-43B3-A9F0-0F25BE93BFB7.heic  0B50AC0F-3AE7-44F9-A288-ECDCA6CC4247.heic  0B9E36A0-0153-4732-806A-193B1C5F91F5.heic  0BA08F75-3D8D-4FAF-95AA-5F56867DB3C3.heic  14641C2E-C78C-4656-B853-F81DD4F84A45.heic  16CB78A3-BB0D-40BB-BB38-F702F8ED4489.heic  1A759003-3C44-447D-BA7A-B8DB540B2E11.heic  1B669DFF-5888-4C45-86C0-FBF1B49B7C94.heic  1D498B0D-0352-4888-8A97-80189952924E.heic  1ED130EF-5A5B-4B21-B9CC-7C9135D74582.heic  22DCE482-40EC-4C01-8188-96EBCA82FEFE.heic  (+122 more)
(+25 files in other folders)
