[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bbox-detector"
version = "1.0.0"
description = "Bounding Box Content Detection - Detects if a bounding box contains punctuation or other content"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Turkcell", email = "developer@turkcell.com.tr"}
]
keywords = ["ocr", "detection", "punctuation", "bounding-box", "image-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]
all = [
    "bbox-detector[api,dev]",
]

[project.scripts]
bbox-detect = "bbox_detector.cli:main"

[project.urls]
Homepage = "https://github.com/duyguabbasoglu/signature_task"
Repository = "https://github.com/duyguabbasoglu/signature_task"

[tool.hatch.build.targets.wheel]
packages = ["src/bbox_detector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
